[gd_scene load_steps=33 format=2]

[ext_resource path="res://realthing.tres" type="TileSet" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://titleroom.gd" type="Script" id=3]
[ext_resource path="res://Ghostmeat.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Ghostmeat Back.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Label2.gd" type="Script" id=6]
[ext_resource path="res://scenes/inventory/theme.tres" type="Theme" id=7]
[ext_resource path="res://scenes/save_load_menu/sl_menu.tscn" type="PackedScene" id=8]
[ext_resource path="res://menus.gd" type="Script" id=9]
[ext_resource path="res://cursor_hand.gd" type="Script" id=10]
[ext_resource path="res://raw_sprites/cursorhand.png" type="Texture" id=11]
[ext_resource path="res://menu_cursor_handler.gd" type="Script" id=12]
[ext_resource path="res://scenes/settingsmenu/Settings.tscn" type="PackedScene" id=13]
[ext_resource path="res://raw_sprites/castlev.png" type="Texture" id=14]
[ext_resource path="res://raw_sprites/circletex.png" type="Texture" id=15]
[ext_resource path="res://raw_sprites/smolwater.png" type="Texture" id=16]
[ext_resource path="res://Castlev.gd" type="Script" id=17]
[ext_resource path="res://scenes/sd_panel/sillyghampterspr.tscn" type="PackedScene" id=18]
[ext_resource path="res://raw_sprites/tree.png" type="Texture" id=19]
[ext_resource path="res://scenes/achivements_demo/achivements_test.tscn" type="PackedScene" id=20]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
font_data = ExtResource( 4 )

[sub_resource type="Environment" id=3]
background_mode = 4
glow_enabled = true
glow_intensity = 1.5
glow_strength = 1.3
glow_hdr_threshold = 0.9

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform vec4 color_to_rep1 : hint_color;
uniform vec4 color_to_rep2 : hint_color;
uniform sampler2D gradient1;
uniform sampler2D gradient2;



bool colorMatch(vec3 c1, vec3 c2, float maxDiff) {
    return (
        abs(c1.r - c2.r) < maxDiff
        && abs(c1.b - c2.b) < maxDiff
        && abs(c1.b - c2.b) < maxDiff
    );
}


vec3 replace_color(vec2 uv,sampler2D gradient)
{
	uv.x = abs(sin(TIME*2.5));
	
	
	return texture(gradient,uv).rgb;
}


void fragment()
{
	
	vec4 rgba = texture(TEXTURE,UV);


	float MDIFF = .01;
	
	// replace color1
	if (colorMatch(rgba.rgb,color_to_rep1.rgb,MDIFF))rgba.rgb = replace_color(UV,gradient1);
	// replace color2
	if (colorMatch(rgba.rgb,color_to_rep2.rgb,MDIFF))rgba.rgb = replace_color(UV,gradient2);


	COLOR = rgba;
}


"

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0, 0.57551, 0.991837 )
colors = PoolColorArray( 0.647059, 0.0823529, 0.168627, 1, 1, 0.128906, 0.128906, 1, 1, 0.84082, 0, 1 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 12 )

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.979592 )
colors = PoolColorArray( 0.380392, 0.101961, 0.282353, 1, 0.523438, 0.0102234, 0.0102234, 1 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/color_to_rep1 = Color( 0.67451, 0.0862745, 0.176471, 1 )
shader_param/color_to_rep2 = Color( 0.427451, 0.113725, 0.317647, 1 )
shader_param/gradient1 = SubResource( 9 )
shader_param/gradient2 = SubResource( 11 )

[sub_resource type="CanvasItemMaterial" id=4]

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -1.01015, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.0295567, 0.182266, 0.597734, 0.852691, 0.988669 )
colors = PoolColorArray( 1, 0.962264, 0, 0, 0.984314, 0.94902, 0.211765, 1, 1, 0, 0, 1, 0, 0, 0, 0.501961, 0, 0, 0, 0 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 16, 160 )

[node name="Tree" type="Sprite" parent="Node2D"]
texture = ExtResource( 19 )

[node name="Tree2" type="Sprite" parent="Node2D"]
position = Vector2( 32, 0 )
texture = ExtResource( 19 )

[node name="Tree3" type="Sprite" parent="Node2D"]
position = Vector2( 64, 0 )
texture = ExtResource( 19 )

[node name="Tree4" type="Sprite" parent="Node2D"]
position = Vector2( 96, 0 )
texture = ExtResource( 19 )

[node name="Tree5" type="Sprite" parent="Node2D"]
position = Vector2( 112, -9 )
texture = ExtResource( 19 )

[node name="Tree6" type="Sprite" parent="Node2D"]
position = Vector2( 112, -9 )
texture = ExtResource( 19 )

[node name="Tree7" type="Sprite" parent="Node2D"]
position = Vector2( 144, -9 )
texture = ExtResource( 19 )

[node name="Tree11" type="Sprite" parent="Node2D"]
position = Vector2( 161, 3 )
texture = ExtResource( 19 )

[node name="Tree8" type="Sprite" parent="Node2D"]
position = Vector2( 80, 12 )
texture = ExtResource( 19 )

[node name="Tree9" type="Sprite" parent="Node2D"]
position = Vector2( 48, 12 )
texture = ExtResource( 19 )

[node name="Tree10" type="Sprite" parent="Node2D"]
position = Vector2( 16, 12 )
texture = ExtResource( 19 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.717647, 0.752941, 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 589845, 8, 65536, 589846, 8, 65536, 589847, 8, 65536, 589848, 8, 65536, 589849, 8, 65536, 589850, 8, 65536, 589851, 8, 65536, 589852, 8, 65536, 589853, 8, 65536, 655381, 8, 65536, 655382, 8, 65536, 655383, 8, 65536, 655384, 8, 65536, 655385, 8, 65536, 655386, 8, 65536, 655387, 8, 65536, 655388, 8, 65536, 655389, 8, 65536, 720917, 8, 65536, 720918, 8, 65536, 720919, 8, 65536, 720920, 8, 65536, 720921, 8, 65536, 720922, 8, 65536, 720923, 8, 65536, 720924, 8, 65536, 720925, 8, 65536, 786439, 3, 196608, 786440, 3, 1, 786441, 3, 1, 786442, 3, 1, 786443, 3, 2, 786453, 8, 65536, 786454, 8, 65536, 786455, 8, 65536, 786456, 8, 65536, 786457, 8, 65536, 786458, 8, 65536, 786459, 8, 65536, 786460, 8, 65536, 786461, 8, 65536, 851968, 3, 1, 851969, 3, 1, 851970, 3, 1, 851971, 3, 1, 851972, 3, 1, 851973, 3, 1, 851974, 3, 1, 851975, 3, 131073, 851976, 3, 65537, 851977, 3, 65537, 851978, 3, 65537, 851979, 3, 65537, 851990, 8, 65536, 851991, 8, 65536, 851992, 8, 65536, 851993, 8, 65536, 851994, 8, 65536, 851995, 8, 65536, 851996, 8, 65536, 851997, 8, 65536, 917504, 3, 65537, 917505, 3, 65537, 917506, 3, 65537, 917507, 3, 65537, 917508, 3, 65537, 917509, 3, 65537, 917510, 3, 65537, 917511, 3, 65537, 917512, 3, 65537, 917513, 3, 65537, 917514, 3, 65537, 917515, 3, 65537, 917527, 8, 65536, 917528, 8, 65536, 917529, 8, 65536, 917530, 8, 65536, 917531, 8, 65536, 917532, 8, 65536, 917533, 8, 65536, 983040, 3, 65537, 983041, 3, 65537, 983042, 3, 65537, 983043, 3, 65537, 983044, 3, 65537, 983045, 3, 65537, 983046, 3, 65537, 983047, 3, 65537, 983048, 8, 65536, 983049, 8, 65536, 983050, 8, 65536, 983051, 8, 65536, 983063, 8, 65536, 983064, 8, 65536, 983065, 8, 65536, 983066, 8, 65536, 983067, 8, 65536, 983068, 8, 65536, 983069, 8, 65536, 1048576, 8, 65536, 1048577, 8, 65536, 1048578, 8, 65536, 1048579, 8, 65536, 1048580, 8, 65536, 1048581, 8, 65536, 1048582, 8, 65536, 1048583, 8, 65536, 1048584, 8, 65536, 1048585, 8, 65536, 1048586, 8, 65536, 1048587, 8, 65536, 1048599, 8, 65536, 1048600, 8, 65536, 1048601, 8, 65536, 1048602, 8, 65536, 1048603, 8, 65536, 1048604, 8, 65536, 1048605, 8, 65536 )

[node name="KinematicBody2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 145, 173 )
unlock_ev = false

[node name="Node2D3" type="Node2D" parent="."]
position = Vector2( 16, 160 )
z_index = 1

[node name="Tree2" type="Sprite" parent="Node2D3"]
position = Vector2( 157, -16 )
texture = ExtResource( 19 )

[node name="Tree3" type="Sprite" parent="Node2D3"]
position = Vector2( 77, 0 )
texture = ExtResource( 19 )

[node name="Tree4" type="Sprite" parent="Node2D3"]
position = Vector2( 45, 0 )
texture = ExtResource( 19 )

[node name="Tree5" type="Sprite" parent="Node2D3"]
position = Vector2( -3, 0 )
texture = ExtResource( 19 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="Label2" type="Label" parent="CanvasLayer2"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -115.5
margin_bottom = -76.5
custom_fonts/font = SubResource( 2 )
text = "hampter game"
align = 1
script = ExtResource( 6 )

[node name="Label" type="Label" parent="CanvasLayer2/Label2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -231.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "hampter game"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2"]
margin_left = 160.0
margin_top = 128.0
margin_right = 304.0
margin_bottom = 196.0
theme = ExtResource( 7 )
script = ExtResource( 12 )
cursorpath = NodePath("Cursorhand")

[node name="Button" type="Button" parent="CanvasLayer2/VBoxContainer"]
margin_right = 144.0
margin_bottom = 20.0
size_flags_vertical = 3
text = "play"

[node name="Button2" type="Button" parent="CanvasLayer2/VBoxContainer"]
margin_top = 24.0
margin_right = 144.0
margin_bottom = 44.0
size_flags_vertical = 3
text = "settings"

[node name="Button3" type="Button" parent="CanvasLayer2/VBoxContainer"]
margin_top = 48.0
margin_right = 144.0
margin_bottom = 68.0
size_flags_vertical = 3
text = "Quit"

[node name="Cursorhand" type="Sprite" parent="CanvasLayer2/VBoxContainer"]
visible = false
position = Vector2( 152, 144 )
texture = ExtResource( 11 )
script = ExtResource( 10 )

[node name="Panel6" parent="CanvasLayer2" instance=ExtResource( 20 )]
margin_left = 32.0
margin_top = 32.0
margin_right = 448.0
margin_bottom = 240.0

[node name="GamePanel" parent="CanvasLayer2" instance=ExtResource( 8 )]

[node name="Settings" parent="CanvasLayer2" instance=ExtResource( 13 )]
visible = false
margin_left = 16.0
margin_right = -16.0
margin_bottom = -14.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="Castlev" type="Sprite" parent="."]
material = SubResource( 8 )
position = Vector2( 408, 96 )
texture = ExtResource( 14 )
hframes = 2
script = ExtResource( 17 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Castlev"]
visible = false
show_behind_parent = true
material = SubResource( 4 )
position = Vector2( -7, 37 )
emitting = false
amount = 256
lifetime = 0.84
randomness = 1.0
local_coords = false
texture = ExtResource( 15 )
emission_shape = 2
emission_rect_extents = Vector2( 24, 1 )
direction = Vector2( 0, -1 )
spread = 10.0
gravity = Vector2( 0, 0 )
initial_velocity = 128.0
initial_velocity_random = 0.32
damping = 75.0
scale_amount = 1.5
scale_amount_random = 0.44
scale_amount_curve = SubResource( 5 )
color_ramp = SubResource( 6 )

[node name="Smolwater" type="Sprite" parent="Castlev"]
show_behind_parent = true
position = Vector2( -3, -10 )
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 0, 0, 5, 45 )

[node name="Node2D2" parent="." instance=ExtResource( 18 )]
visible = false
position = Vector2( 130, 185 )

[node name="CanvasLayer3" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer3"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="CanvasLayer2/VBoxContainer/Button" to="CanvasLayer2" method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer2/VBoxContainer/Button2" to="CanvasLayer2" method="_on_Button2_pressed"]
[connection signal="pressed" from="CanvasLayer2/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="menu_exited" from="CanvasLayer2/GamePanel" to="CanvasLayer2" method="_on_GamePanel_menu_exited"]
[connection signal="deselected" from="CanvasLayer2/Settings" to="CanvasLayer2" method="_on_GamePanel_menu_exited"]
